Add complete React Native Android overlay translator app
All 30 files: Java services (OverlayService, ClipboardMonitorService,
LanguageAccessibilityService, OverlayModule, OverlayPackage,
MainActivity, MainApplication, ShareReceiverActivity, BootReceiver),
React Native components/screens/services, Android Gradle config,
AndroidManifest, and local EN-ES dictionary.