@@ -4,14 +4,14 @@ import com.facebook.react.ReactPackage;
 import com.facebook.react.bridge.NativeModule;
 import com.facebook.react.bridge.ReactApplicationContext;
 import com.facebook.react.uimanager.ViewManager;
-import java.util.Arrays;
+
 import java.util.Collections;
 import java.util.List;
 
 public class OverlayPackage implements ReactPackage {
     @Override
     public List<NativeModule> createNativeModules(ReactApplicationContext context) {
-        return Arrays.asList(new OverlayModule(context));
+        return List.of(new OverlayModule(context));
     }
 
     @Override
